# dnsmasqweb

./: AGENTS.md  Cargo.toml  README.md  Trunk.toml  index.html  rust-toolchain.toml
.github/workflows/: release.yml
.zed/: settings.json
src/: app.rs  error.rs  i18n.rs  lib.rs  main.rs  server.rs  server_fns.rs
src/config/: records.rs  render.rs
src/dnsmasq/: systemd.rs
src/server/: auth.rs  config_apply.rs  dto.rs  handlers.rs  routes.rs  services.rs  state.rs
src/storage/: backup.rs
src/ui/: api.rs  pages.rs  tables.rs
src/ui/components/: confirm_dialog.rs  editable_table.rs  status_badge.rs  toolbar.rs
src/ui/pages/: backups.rs  dashboard.rs  raw_editor.rs  records.rs
src/ui/pages/dashboard/: auth.rs  notice.rs  storage.rs  tabs.rs
src/ui/tables/: address_table.rs  cname_table.rs  host_record_table.rs  server_table.rs
style/: main.css
tests/: backup_tests.rs
